// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[parseNumberSkeleton] case: "% .##" 1`] = `
Object {
  "maximumFractionDigits": 2,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "%x100" 1`] = `
Object {
  "scale": 100,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "()!" 1`] = `
Object {
  "currencySign": "accounting",
  "signDisplay": "always",
}
`;

exports[`[parseNumberSkeleton] case: "()" 1`] = `
Object {
  "currencySign": "accounting",
}
`;

exports[`[parseNumberSkeleton] case: "()?" 1`] = `
Object {
  "currencySign": "accounting",
  "signDisplay": "exceptZero",
}
`;

exports[`[parseNumberSkeleton] case: "+!" 1`] = `
Object {
  "signDisplay": "always",
}
`;

exports[`[parseNumberSkeleton] case: "+?" 1`] = `
Object {
  "signDisplay": "exceptZero",
}
`;

exports[`[parseNumberSkeleton] case: "+_" 1`] = `
Object {
  "signDisplay": "never",
}
`;

exports[`[parseNumberSkeleton] case: "." 1`] = `
Object {
  "maximumFractionDigits": 0,
}
`;

exports[`[parseNumberSkeleton] case: ".##" 1`] = `
Object {
  "maximumFractionDigits": 2,
}
`;

exports[`[parseNumberSkeleton] case: ".##/@##r" 1`] = `
Object {
  "maximumFractionDigits": 2,
  "maximumSignificantDigits": 3,
  "minimumSignificantDigits": 1,
  "roundingPriority": "morePrecision",
}
`;

exports[`[parseNumberSkeleton] case: ".##/@##s" 1`] = `
Object {
  "maximumFractionDigits": 2,
  "maximumSignificantDigits": 3,
  "minimumSignificantDigits": 1,
  "roundingPriority": "lessPrecision",
}
`;

exports[`[parseNumberSkeleton] case: ".##/w" 1`] = `
Object {
  "maximumFractionDigits": 2,
  "trailingZeroDisplay": "stripIfInteger",
}
`;

exports[`[parseNumberSkeleton] case: "000" 1`] = `
Object {
  "minimumIntegerDigits": 3,
}
`;

exports[`[parseNumberSkeleton] case: "E+!00" 1`] = `
Object {
  "minimumIntegerDigits": 2,
  "notation": "scientific",
  "signDisplay": "always",
}
`;

exports[`[parseNumberSkeleton] case: "E0" 1`] = `
Object {
  "minimumIntegerDigits": 1,
  "notation": "scientific",
}
`;

exports[`[parseNumberSkeleton] case: "EE+?000" 1`] = `
Object {
  "minimumIntegerDigits": 3,
  "notation": "engineering",
  "signDisplay": "exceptZero",
}
`;

exports[`[parseNumberSkeleton] case: "compact-long" 1`] = `
Object {
  "compactDisplay": "long",
  "notation": "compact",
}
`;

exports[`[parseNumberSkeleton] case: "compact-short" 1`] = `
Object {
  "compactDisplay": "short",
  "notation": "compact",
}
`;

exports[`[parseNumberSkeleton] case: "currency/CAD ." 1`] = `
Object {
  "currency": "CAD",
  "maximumFractionDigits": 0,
  "style": "currency",
}
`;

exports[`[parseNumberSkeleton] case: "currency/GBP .0*/@@@" 1`] = `
Object {
  "currency": "GBP",
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 1,
  "minimumSignificantDigits": 3,
  "style": "currency",
}
`;

exports[`[parseNumberSkeleton] case: "currency/GBP .00##/@@@ unit-width-full-name" 1`] = `
Object {
  "currency": "GBP",
  "currencyDisplay": "name",
  "maximumFractionDigits": 4,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "currency",
  "unitDisplay": "long",
}
`;

exports[`[parseNumberSkeleton] case: "currency/GBP .00##/@@@" 1`] = `
Object {
  "currency": "GBP",
  "maximumFractionDigits": 4,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "currency",
}
`;

exports[`[parseNumberSkeleton] case: "engineering" 1`] = `
Object {
  "notation": "engineering",
}
`;

exports[`[parseNumberSkeleton] case: "engineering/sign-except-zero" 1`] = `
Object {
  "notation": "engineering",
  "signDisplay": "exceptZero",
}
`;

exports[`[parseNumberSkeleton] case: "integer-width/*000" 1`] = `
Object {
  "minimumIntegerDigits": 3,
}
`;

exports[`[parseNumberSkeleton] case: "measure-unit/length-meter .00##/@@@ unit-width-full-name" 1`] = `
Object {
  "currencyDisplay": "name",
  "maximumFractionDigits": 4,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "unit",
  "unit": "meter",
  "unitDisplay": "long",
}
`;

exports[`[parseNumberSkeleton] case: "measure-unit/length-meter .00##/@@@" 1`] = `
Object {
  "maximumFractionDigits": 4,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "unit",
  "unit": "meter",
}
`;

exports[`[parseNumberSkeleton] case: "notation-simple" 1`] = `
Object {
  "notation": "standard",
}
`;

exports[`[parseNumberSkeleton] case: "percent .##" 1`] = `
Object {
  "maximumFractionDigits": 2,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "percent .0###" 1`] = `
Object {
  "maximumFractionDigits": 4,
  "minimumFractionDigits": 1,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "percent .00/@##" 1`] = `
Object {
  "maximumFractionDigits": 2,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 1,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "percent .00/@@@" 1`] = `
Object {
  "maximumFractionDigits": 2,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "percent .00/@@@@*" 1`] = `
Object {
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "percent .000*" 1`] = `
Object {
  "minimumFractionDigits": 3,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "percent scale/0.01" 1`] = `
Object {
  "scale": 0.01,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "scientific" 1`] = `
Object {
  "notation": "scientific",
}
`;

exports[`[parseNumberSkeleton] case: "scientific/+ee/sign-always" 1`] = `
Object {
  "notation": "scientific",
  "signDisplay": "always",
}
`;

exports[`[parseNumberSkeleton] case: "scientific/sign-always" 1`] = `
Object {
  "notation": "scientific",
  "signDisplay": "always",
}
`;

exports[`[parseNumberSkeleton] case: "sign-accounting" 1`] = `
Object {
  "currencySign": "accounting",
}
`;

exports[`[parseNumberSkeleton] case: "sign-accounting-always" 1`] = `
Object {
  "currencySign": "accounting",
  "signDisplay": "always",
}
`;

exports[`[parseNumberSkeleton] case: "sign-accounting-except-zero" 1`] = `
Object {
  "currencySign": "accounting",
  "signDisplay": "exceptZero",
}
`;

exports[`[parseNumberSkeleton] case: "sign-always" 1`] = `
Object {
  "signDisplay": "always",
}
`;

exports[`[parseNumberSkeleton] case: "sign-auto" 1`] = `
Object {
  "signDisplay": "auto",
}
`;

exports[`[parseNumberSkeleton] case: "sign-except-zero" 1`] = `
Object {
  "signDisplay": "exceptZero",
}
`;

exports[`[parseNumberSkeleton] case: "sign-never" 1`] = `
Object {
  "signDisplay": "never",
}
`;

exports[`case: "" 1`] = `Object {}`;

exports[`case: "EEE, MMM d, ''yy" 1`] = `
Object {
  "day": "numeric",
  "month": "short",
  "weekday": "short",
  "year": "2-digit",
}
`;

exports[`case: "h:mm a" 1`] = `
Object {
  "hour": "numeric",
  "hour12": true,
  "hourCycle": "h12",
  "minute": "2-digit",
}
`;

exports[`case: "yyyy.MM.dd G 'at' HH:mm:ss zzzz" 1`] = `
Object {
  "day": "2-digit",
  "era": "short",
  "hour": "2-digit",
  "hourCycle": "h23",
  "minute": "2-digit",
  "month": "2-digit",
  "second": "2-digit",
  "timeZoneName": "long",
  "year": "numeric",
}
`;
